<resources>
    <string name="app_name">PVP survival</string>
    <string name="butStartGame">New Game</string>
    <string name="Character">Character</string>
    <string name="butStats">Stats</string>
    <string name="butNastaveni">Settings</string>
    <string name="AboutGame">About Game</string>
    <string name="Exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slider1">Slider 1</string>
    <string name="slider2">Slider 2</string>
    <string name="slider3">Slider 3</string>
    <string name="slider4">Slider 4</string>
    <string name="cont">Continue</string>
    <string name="edit_set_user_name">Set your name</string>
    <string name="warningSetUserName">Your name has to be longer than 3 chars.</string>
    <string name="reccomand_more_loud_sound">If you wont to get better entertiment, please turn sound up</string>
    <string name="warning1">Min 4 chars!</string>
    <string name="edittextSetName">Here set your games name</string>
    <string name="backtomenu">Back to menu</string>
    <string name="send_letter">Send letter</string>
    <string name="behaviour">Behaviour</string>
    <string name="inventory">Inventory</string>
    <string name="chat">Chat</string>
    <string name="trip">Trip</string>
    <string name="fight">Fight</string>
    <string name="travel">Travel</string>
    <string name="hunt">Hunt</string>
    <string name="create_something">Create something</string>
    <string name="explore_surrounding">Explore surrounding</string>
    <string name="change_body_position">Change body position</string>
    <string name="lets_travel_there">Lets travel there</string>
    <string name="effect_fire">a magnificent glow with great smoke</string>
    <string name="basicLook_cliff">the foot of the rock cliff</string>
    <string name="basicLook_forest_leafy">fresh deciduous forest</string>
    <string name="lets_go_there">Lets go there...</string>
    <string name="look_around_a">You can see</string>
    <string name="Look_around_b">On the horizon, you can see</string>
    <string name="Look_around_c">There is</string>
    <string name="Look_around_d">Over there you can see</string>
    <string name="inventary_food_but">Food</string>
    <string name="inventary_clothes_but">Clothes</string>
    <string name="inventary_tools_but">tools</string>
    <string name="inventary_weapon_but">Weapons</string>
    <string name="inventary_nature_resources_but">Nature resources</string>
    <string name="inventary_others_but">Others</string>
    <string name="inventary_quest_but">Quest items</string>
    <string name="ItemDescriptionResources_condition_Food_rotten">It\'s spoiled with disgusting stink.</string>
    <string name="ItemDescriptionResources_condition_Tool_rotten">It\'s really delapitated.</string>
    <string name="ItemDescriptionResources_condition_Clothes_rotten">It is so stale and leaky. It has so bad condition.</string>
    <string name="ItemDescriptionResources_condition_Basic_rotten">It has so bad condition.</string>
    <string name="ItemDescriptionResources_condition_Quest_rotten">It has so bad condition.</string>
    <string name="ItemDescriptionResources_condition_Basic_bad">It does not  looks very well.</string>
    <string name="ItemDescriptionResources_condition_Food_bad">It does not smell very well.</string>
    <string name="ItemDescriptionResources_condition_Tool_bad">Its condition does not look very well.</string>
    <string name="ItemDescriptionResources_condition_Clothes_bad">It is so threadbare.</string>
    <string name="ItemDescriptionResources_condition_Quest_bad">It doesn\'t look very well.</string>
    <string name="ItemDescriptionResources_condition_Basic_medium">It is slightly shabby.</string>
    <string name="ItemDescriptionResources_condition_Food_medium">It is not fresh but looks edble.</string>
    <string name="ItemDescriptionResources_condition_Tool_medium">It looks slightly shabby</string>
    <string name="ItemDescriptionResources_condition_Clothes_medium">It looks slightly shabby</string>
    <string name="ItemDescriptionResources_condition_Quest_medium">It is slightly shabby.</string>
    <string name="ItemDescriptionResources_condition_Basic_fine">It is good condition.</string>
    <string name="ItemDescriptionResources_condition_Food_fine">It\'s still a little bit fresh.</string>
    <string name="ItemDescriptionResources_condition_Tool_fine">It is in good condition.</string>
    <string name="ItemDescriptionResources_condition_Clothes_fine">Looking good.</string>
    <string name="ItemDescriptionResources_condition_Quest_fine">It has good condition.</string>
    <string name="ItemDescriptionResources_condition_Food_fresh">It smells and looks really good.</string>
    <string name="ItemDescriptionResources_condition_Basic_fresh">It has really good condition.</string>
    <string name="ItemDescriptionResources_condition_Tool_fresh">It has really good condition.</string>
    <string name="ItemDescriptionResources_condition_Clothes_fresh">It looks like new.</string>
    <string name="ItemDescriptionResources_condition_Quest_fresh">It looks really good.</string>
    <string name="ItemDescriptionResources_lookItem_apple">Just round apple.</string>
    <string name="ItemDescriptionResources_lookItem_leatherJacket">It\'s a large leather jacket</string>
    <string name="ItemDescriptionResources_nameItem_apple">Apple</string>
    <string name="ItemDescriptionResources_nameItem_leatherJacket">Leather jacket</string>

</resources>
