<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.belafon.pvpsurvival.TheGame.Fragments.BehaviorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:id="@+id/behavior_menu_buttons">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/change_body_position"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button2"
                    android:hint="@string/change_body_position"
                    android:onClick="makeBehavior"
                    android:textColorHint="@color/white" />
                <Button
                    android:id="@+id/explore_surrounding"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button2"
                    android:hint="@string/explore_surrounding"
                    android:onClick="makeBehavior"
                    android:textColorHint="@color/white" />
                <Button
                    android:id="@+id/create_something"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button2"
                    android:hint="@string/create_something"
                    android:onClick="makeBehavior"
                    android:textColorHint="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/hunt"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button2"
                    android:hint="@string/hunt"
                    android:onClick="makeBehavior"
                    android:textColorHint="@color/white" />
                <Button
                    android:id="@+id/travel"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button2"
                    android:hint="@string/travel"
                    android:onClick="makeBehavior"
                    android:textColorHint="@color/white" />
                <Button
                    android:id="@+id/fight"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button2"
                    android:hint="@string/fight"
                    android:onClick="makeBehavior"
                    android:textColorHint="@color/white" />
            </LinearLayout>
        </LinearLayout>
        <ScrollView
            android:layout_marginLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/scrllview_behavior_1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons_change_body_position"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_marginLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/scrllview_behavior_2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons_explore_surrounding"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_marginLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/scrllview_behavior_3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons_create_something"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_marginLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/scrllview_behavior_4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons_hunt"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_marginLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/scrllview_behavior_5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons_others"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
        <ScrollView
            android:layout_marginLeft="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/scrllview_behavior_6">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons_fight"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>
